# groonga-term-similar

./: Makefile.am  README.md  clean.sh  configure.ac
commands/: Makefile.am  term_similar.c
test/suite/edit_distance_bp/: deletion.expected  deletion.test  insertion.expected  insertion.test  substitution.expected  substitution.test  transposition.expected  transposition.test
test/suite/keyboard_distance/: deletion.expected  deletion.test  insertion.expected  insertion.test  insertion_with_keyboard_distance.expected  insertion_with_keyboard_distance.test  substitution.expected  substitution.test  substitution_with_keybord_distance.expected  substitution_with_keybord_distance.test  transposition.expected  transposition.test
test/suite/table_term_similar/: default.expected  default.test  df_threshold.expected  df_threshold.test  distance_threshold.expected  distance_threshold.test  limit.expected  limit.test  prefix_length.expected  prefix_length.test  prefix_length_with_ratio.expected  prefix_length_with_ratio.test  same_term.expected  same_term.test  same_term_with_df_threshold.expected  same_term_with_df_threshold.test
test/suite/term_similar/: prefix_length_with_ratio.expected  prefix_length_with_ratio.test  term_similar.expected  term_similar.test  term_similar_no_index.expected  term_similar_no_index.test  term_similar_reference_value.expected  term_similar_reference_value.test
test/suite/typo_filter/: ja.expected  ja.test  long_distance.expected  long_distance.test  short_distance.expected  short_distance.test
